--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>s3-client</title>
+    <base href="%PUBLIC_URL%/">
   </head>
   <body class="h-full w-full bg-gray-900">
     <div id="root"  class="flex h-screen w-screen"></div>
